Fixed spacing after captions

--- a/interactives/fullerton-nimby/css/styles.sass
+++ b/interactives/fullerton-nimby/css/styles.sass
@@ -65,15 +65,21 @@ p
   //padding-bottom: 20px
   text-align: center
   margin: 50px auto
+  padding: 10px
   line-height: 1.3
   color: $nearblack
-  @media(max-width: 500px)
+  @media(max-width: 650px)
     width: 95%
+    padding: 10px
   img
     width: 200px
     padding: 10px
+    @media(max-width: 650px)
+      width: 95%
   h1
     font-weight: 700
+    @media(max-width: 650px)
+      width: 95%
 
 .lead-art
   width: 100%
@@ -107,7 +113,7 @@ p
 .content-well
   width: 650px
   margin: 0 auto
-  @media(max-width: 500px)
+  @media(max-width: 650px)
     width: 95%
 
 *
@@ -132,6 +138,9 @@ p
   @media(max-width: 650px)
     width: 95%
     padding: 10px 10px 10px 0
+  &:first-child
+    margin-top: -35px
+
 
 .chapter-num
   color: $nearblack
@@ -336,7 +345,7 @@ p
   //height: 190px
   // text-align: right
   //float: right
-  min-height: 150px
+  min-height: 50px
   font-size: 2rem
   padding: 10px 15px 15px 15px
   margin: 0 15px
